--- a/loops/studio/package.json
+++ b/loops/studio/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jest-get-type": "^29.6.3",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
